
  CHANGES SINCE 1.1
=====================

Added --sparse option (genetic)
Improved scientific mode (genetic)