@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Sat Oct 19 17:38:15 CEST 2013
-buildNumber0=2592
+#Sat Oct 19 20:16:58 CEST 2013
+buildNumber0=2598
